overlays/prod/ids/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ids
  template:
    metadata:
      labels:
        app: ids
    spec:
      containers:
      - name: api
        image: adhp/zan-ids:main-776d856
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        command: ["/app/api"]
        args:
          - server
          - --config
          - /etc/zan-ids/config.yaml
        volumeMounts:
        - name: config
          mountPath: /etc/zan-api
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 512Mi
      volumes:
      - name: config
        emptyDir: {}
