overlays/prod/ids/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ids-frontend
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
  selector:
    app: ids-frontend
