overlays/prod/ids/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ids
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3000
  selector:
    app: ids
