overlays/prod/ids/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ids
  namespace: zan
spec:
  ingressClassName: nginx
  rules:
  - host: ids.zanartcc.org
    http:
      paths:
      - backend:
          service:
            name: auth
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ids.zanartcc.org
    secretName: tls-ids-zanartcc-org
